# market-data

./: .dockerignore  .gitignore  Dockerfile  README.md  _check.py  cli.py  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  resume_a.py  resume_tick.py  run_all.py  scheduler.py
.superpowers/sdd/: progress.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/: market-data-tech-doc.md
docs/superpowers/plans/: 2026-06-27-market-data-pipeline.md  2026-06-29-phase1-data-sources.md  (+4 more)
src/: db.py  pipeline.py  utils.py  validator.py
src/agent/: __init__.py  app.py  llm.py  tools.py
src/backtest/: __init__.py  report.py  runner.py
src/discover/: __init__.py  compiler.py  translator.py
src/factors/: __init__.py  engine.py  registry.py
src/market_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/monitor/: __init__.py  engine.py  maintainer.py
src/screening/: __init__.py  screener.py
src/sources/: akshare.py  base.py  eastmoney_datacenter.py  eastmoney_source.py  mootdx_source.py  sina_source.py  tencent_source.py  ths_northbound.py  tushare.py  yfinance.py
tests/: test_backtest.py  test_db.py  test_discover.py  test_factors.py  test_integration.py  test_monitor.py  test_pipeline_mock.py  test_screening.py  test_sources_phase1.py  test_sources_phase3.py  test_strategy_rules.py  test_sync_status.py  test_trading_calendar.py  test_utils.py  test_v2_integration.py  test_validator.py
(+4 files in other folders)
