[project]
name = "market-data"
version = "0.1.0"
description = "A-share + ETF + HK + US market data pipeline"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "tushare>=1.4",
    "akshare>=1.14",
    "yfinance>=0.2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "schedule>=1.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
